--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,5 +15,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Lint
+          run: |
+            black --check .
+            flake8 .
+            isort --check .
+      - name: Check migrations
+          run: python manage.py makemigrations --check
       - name: Run tests
         run: pytest
