--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+black==20.8b1
 django==3.1.3
+flake8==3.8.4
+isort==5.6.4
 model_bakery==1.2.1
 Pillow==8.2.0
+pre-commit==2.12.0
 pytest==6.1.2
 pytest-django==4.1.0
