create makefile to assist in executing commands and checking lints

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,17 @@
 [flake8]
 max-line-length = 88
-exclude = .git,*migrations*
 extend-ignore = E203
+
+exclude =
+    .git,
+    .gitignore,
+    *migrations*
+    *.pot,
+    *.py[co],
+    __pycache__,
+    venv,
+    .venv,
+    .env
 
 [isort]
 multi_line_output = 3
