--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 black==22.3.0
 django==3.2
-flake8==3.8.4
+flake8==3.9.0
 isort==5.6.4
 model_bakery==1.2.1
 Pillow==8.2.0
@@ -9,4 +9,4 @@ pytest==7.1.3
 pytest-django==4.5.2
 python-decouple==3.6
 django-extensions==3.2.1
-ipython=7.34.0
+ipython==7.34.0
